Add portfolio website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,8 +61,6 @@
             position: relative;
             z-index: 2;
         }
-
-
 
         header {
             background: linear-gradient(135deg, #0a0e27 0%, #1a1f3a 100%);
@@ -469,12 +467,16 @@
     <div class="container">
         <header>
             <h1 class="glitch">EMANUELE_TORRISI</h1>
-            <p>[ CYBERSECURITY SPECIALIST | PENTESTER | AI SECURITY RESEARCHER ]</p>
+            <p>[ CYBERSECURITY SPECIALIST | AI SECURITY ]</p>
             <div class="contact-links">
                 <a href="mailto:ematorris12@gmail.com">[ EMAIL ]</a>
                 <a href="https://linkedin.com/in/emanuele-torrisi" target="_blank">[ LINKEDIN ]</a>
-                <a href="https://github.com/EmaTorris" target="_blank">[ GITHUB ]</a>
                 <a href="tel:+393384168804">[ PHONE ]</a>
+            </div>
+            <div style="text-align: center; margin-top: 25px;">
+                <a href="https://github.com/EmaTorris" target="_blank" style="display: inline-block; background: rgba(0, 255, 0, 0.2); color: #00ff00; padding: 15px 40px; border: 2px solid #00ff00; text-decoration: none; font-size: 1.3em; font-weight: bold; transition: all 0.3s; text-shadow: 0 0 10px #00ff00;">
+                    [ VISIT MY GITHUB ]
+                </a>
             </div>
         </header>
 
@@ -483,7 +485,7 @@
                 <h2>PROFILE.txt</h2>
                 <div class="about">
                     <p><span class="terminal-prompt">user@security:~$</span> cat profile.txt</p>
-                    <p>Professionista specializzato in cybersecurity con forte interesse per AI & penetration testing, valutazione delle vulnerabilità e sicurezza applicativa. Esperienza in IAM, secure coding e hardening, con approccio strutturato basato su standard OWASP e best practice di security engineering.<span class="blinking-cursor"></span></p>
+                    <p>Cybersecurity professional passionate in AI & penetration testing, vulnerability assessment, and application security. Experienced in IAM, secure coding, and hardening, with a structured approach based on OWASP standards and security engineering best practices.<span class="blinking-cursor"></span></p>
                 </div>
             </section>
 
@@ -493,7 +495,7 @@
                 <div class="project-card">
                     <h3>🔗 [CLEARCHAIN] - BLOCKCHAIN SECURITY PLATFORM</h3>
                     <p><strong>STATUS:</strong> ACTIVE | <strong>ROLE:</strong> Co-founder | <strong>PERIOD:</strong> 10.2021 - PRESENT</p>
-                    <p>Sviluppo di web-app basata su tecnologia blockchain con focus sulla sicurezza OWASP. Include dispositivo hardware IoT per monitoraggio real-time con comunicazione cifrata verso server remoti e protezione anti-compromissione.</p>
+                    <p>Development of a blockchain-based web application with focus on OWASP security. Includes IoT hardware device for real-time monitoring with encrypted communication to remote servers and anti-compromise protection.</p>
                     <div class="tech-tags">
                         <span class="tech-tag">[ Go ]</span>
                         <span class="tech-tag">[ MongoDB ]</span>
@@ -512,12 +514,12 @@
                 
                 <div class="experience-item">
                     <h3>[CYBER_SEC_ENGINEER] - Lutech S.P.A.</h3>
-                    <div class="experience-meta">LOCATION: Milano-Napoli | PERIOD: 01.2024 - 02.2025</div>
+                    <div class="experience-meta">LOCATION: Milan-Naples | PERIOD: 01.2024 - 02.2025</div>
                     <ul>
-                        <li>Gestione e deployment di soluzioni IAM per clienti enterprise</li>
-                        <li>Sviluppo connettori Java per SailPoint IdentityIQ, AWS IAM, Azure, Jira</li>
-                        <li>Implementazione di policy di sicurezza e gestione accessi</li>
-                        <li>Direct client communication e requirement analysis</li>
+                        <li>Management and deployment of IAM solutions for enterprise clients</li>
+                        <li>Development of Java connectors for SailPoint IdentityIQ, AWS IAM, Azure, Jira</li>
+                        <li>Implementation of security policies and access management</li>
+                        <li>Direct client communication and requirement analysis</li>
                         <li>TECH_STACK: AWS IAM, SailPoint IdentityIQ, Java</li>
                     </ul>
                 </div>
@@ -526,10 +528,10 @@
                     <h3>[AMBASSADOR] - Contamination Lab UniPi</h3>
                     <div class="experience-meta">LOCATION: Pisa | PERIOD: 03.2023 - 06.2024</div>
                     <ul>
-                        <li>Organizzazione hackathon e iniziative tech</li>
-                        <li>Mentoring studenti e startup pre-seed</li>
-                        <li>Seminari su imprenditorialità e business strategy</li>
-                        <li>Supporto business model validation</li>
+                        <li>Organization of hackathons and tech initiatives</li>
+                        <li>Mentoring students and pre-seed startups</li>
+                        <li>Seminars on entrepreneurship and business strategy</li>
+                        <li>Business model validation support</li>
                     </ul>
                 </div>
 
@@ -537,9 +539,9 @@
                     <h3>[GAME_DEVELOPER] - Museum of Calculation Instruments</h3>
                     <div class="experience-meta">LOCATION: Pisa | PERIOD: 11.2014 - 07.2015</div>
                     <ul>
-                        <li>Sviluppo videogioco educativo per il Museo degli Strumenti del Calcolo</li>
-                        <li>Implementazione meccaniche di gamification per esperienza museale interattiva</li>
-                        <li>Design e sviluppo gameplay educativo</li>
+                        <li>Development of educational video game for the Museum of Calculation Instruments</li>
+                        <li>Implementation of gamification mechanics for interactive museum experience</li>
+                        <li>Design and development of educational gameplay</li>
                     </ul>
                 </div>
             </section>
@@ -635,25 +637,25 @@
                 <div class="experience-item">
                     <h3>[AI_CYBERSEC_ACADEMY] - Randstad Digital</h3>
                     <div class="experience-meta">DURATION: 240h | PERIOD: 01.2026 - 02.2026</div>
-                    <p>Corso intensivo full-time sull'intersezione tra AI e cybersecurity. Focus su AI security, threat detection, machine learning per sicurezza.</p>
+                    <p>Intensive full-time course on the intersection of AI and cybersecurity. Focus on AI, machine learning for security.</p>
                 </div>
 
                 <div class="experience-item">
-                    <h3>[BSc_COMPUTER_SCIENCE] - Università di Pisa</h3>
-                    <div class="experience-meta">DEGREE: L-31 Informatica | COMPLETED: 02.2026</div>
-                    <p>Laurea triennale con focus su sicurezza informatica, reti e programmazione.</p>
+                    <h3>[BSc_COMPUTER_SCIENCE] - University of Pisa</h3>
+                    <div class="experience-meta">DEGREE: L-31 Computer Science | COMPLETED: 02.2026</div>
+                    <p>Bachelor's degree with focus on cybersecurity, networking and programming.</p>
                 </div>
 
                 <div class="experience-item">
                     <h3>[ENTREPRENEURSHIP] - HM Munich</h3>
                     <div class="experience-meta">LOCATION: Germany | PERIOD: 10.2022 - 10.2023</div>
-                    <p>Corso di formazione sull'imprenditoria presso Università di Scienze Applicate di Monaco.</p>
+                    <p>Entrepreneurship training course at Munich University of Applied Sciences.</p>
                 </div>
 
                 <div class="experience-item">
-                    <h3>[CONTAMINATION_LAB] - Università di Pisa</h3>
+                    <h3>[CONTAMINATION_LAB] - University of Pisa</h3>
                     <div class="experience-meta">LOCATION: Pisa | PERIOD: 01.2022 - 06.2022</div>
-                    <p>Corso di formazione sull'imprenditoria. Programma intensivo focalizzato su innovazione, sviluppo startup e business model validation.</p>
+                    <p>Entrepreneurship training course. Intensive program focused on innovation, startup development and business model validation.</p>
                 </div>
             </section>
         </div>
