--- a/index.html
+++ b/index.html
@@ -477,6 +477,9 @@
                 <a href="https://github.com/EmaTorris" target="_blank" style="display: inline-block; background: rgba(0, 255, 0, 0.2); color: #00ff00; padding: 15px 40px; border: 2px solid #00ff00; text-decoration: none; font-size: 1.3em; font-weight: bold; transition: all 0.3s; text-shadow: 0 0 10px #00ff00;">
                     [ VISIT MY GITHUB ]
                 </a>
+                <a href="https://app.hackthebox.com/users/206831" target="_blank" style="display: inline-block; background: rgba(0, 255, 0, 0.2); color: #00ff00; padding: 15px 40px; border: 2px solid #00ff00; text-decoration: none; font-size: 1.3em; font-weight: bold; transition: all 0.3s; text-shadow: 0 0 10px #00ff00;">
+                    [ VIEW HTB PROFILE ]
+                </a>
             </div>
         </header>
 
