Add portfolio website

--- a/index.html
+++ b/index.html
@@ -496,19 +496,21 @@
                 <h2>ACTIVE_PROJECTS</h2>
                 
                 <div class="project-card">
-                    <h3>🔗 [CLEARCHAIN] - BLOCKCHAIN SECURITY PLATFORM</h3>
-                    <p><strong>STATUS:</strong> ACTIVE | <strong>ROLE:</strong> Co-founder | <strong>PERIOD:</strong> 10.2021 - PRESENT</p>
-                    <p>Development of a blockchain-based web application with focus on OWASP security. Includes IoT hardware device for real-time monitoring with encrypted communication to remote servers and anti-compromise protection.</p>
+                    <h3>🔗 [CLEARCHAIN] - IoT TRACKING SYSTEM FOR AGRIFOOD</h3>
+                    <p><strong>STATUS:</strong> ACTIVE | <strong>ROLE:</strong> CTO & Co-founder | <strong>PERIOD:</strong> 10.2021 - PRESENT</p>
+                    <p>Smart IoT device for real-time tracking of agrifood products throughout the supply chain. Blockchain-based platform combining GPS tracking, environmental sensors (temperature, humidity, light, CO2), and AI-powered digital twin predictions to monitor product conditions, ensure quality, and reduce food waste.</p>
                     <div class="tech-tags">
                         <span class="tech-tag">[ Go ]</span>
                         <span class="tech-tag">[ MongoDB ]</span>
                         <span class="tech-tag">[ JavaScript ]</span>
-                        <span class="tech-tag">[ Bootstrap ]</span>
+                        <span class="tech-tag">[ IoT Sensors ]</span>
                         <span class="tech-tag">[ Blockchain ]</span>
-                        <span class="tech-tag">[ IoT Security ]</span>
-                        <span class="tech-tag">[ OWASP ]</span>
+                        <span class="tech-tag">[ AI/ML ]</span>
+                        <span class="tech-tag">[ GPS Tracking ]</span>
+                        <span class="tech-tag">[ Cybersecurity ]</span>
                     </div>
-                    <p style="margin-top: 15px;"><em>📜 PATENT_FILED: 01.03.2023</em></p>
+                    <p style="margin-top: 15px;"><em>📜 PATENT_FILED: 01.03.2023 | 🏆 Multiple awards including EIT Food, Women Startup Competition Vienna</em></p>
+                    <p style="margin-top: 10px;"><a href="https://www.clearchain.it" target="_blank" style="color: #00ff00; text-decoration: underline;">→ Visit clearchain.it</a></p>
                 </div>
             </section>
 
